--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.epam.rd.capstonepoject</groupId>
-    <artifactId>capstone-project</artifactId>
+    <groupId>com.gusev.project</groupId>
+    <artifactId>Authentication-and-Authorization-Project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
